--- a/application.properties
+++ b/application.properties
@@ -1,1 +1,1 @@
-insurance.provider.url=http://localhost:8084/employee-service/getUpdatedEmployee
+employee.details.url=http://localhost:8084/employee-service/getUpdatedEmployee
